docker contrainarize services

--- a/src/Services/Stock/EStk.API/appsettings.json
+++ b/src/Services/Stock/EStk.API/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "sqlConnection": "Data Source=Kanishka-Office\\SQLEXPRESS;Initial Catalog=EStockerDb;Persist Security Info=True;User ID=sa;Password=admin123456"
   },
+  "AuthSeeting": {
+    "AuthorityUrl": "https://localhost:7000"
+  },
   "AllowedHosts": "*"
 }
